projects/vb6parse/snapshots/parsers/cst/expressions/function_call_no_args.snap
---
source: projects/vb6parse/tests/expressions.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: AssignmentStatement
      children:
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: x
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: CallExpression
          children:
            - kind: Identifier
              text: MyFunction
            - kind: LeftParenthesis
              text: (
            - kind: ArgumentList
              children: []
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
