projects/vb6parse/snapshots/parsers/cst/expressions/logical_not.snap
---
source: projects/vb6parse/tests/expressions.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: AssignmentStatement
      children:
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: x
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: UnaryExpression
          children:
            - kind: NotKeyword
              text: Not
            - kind: Whitespace
              text: " "
            - kind: BooleanLiteralExpression
              children:
                - kind: TrueKeyword
                  text: "True"
        - kind: Newline
          text: "\n"
