projects/vb6parse/snapshots/parsers/cst/expressions/modulo_operator.snap
---
source: projects/vb6parse/tests/expressions.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: AssignmentStatement
      children:
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: x
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: BinaryExpression
          children:
            - kind: NumericLiteralExpression
              children:
                - kind: IntegerLiteral
                  text: "10"
            - kind: Whitespace
              text: " "
            - kind: ModKeyword
              text: Mod
            - kind: Whitespace
              text: " "
            - kind: NumericLiteralExpression
              children:
                - kind: IntegerLiteral
                  text: "3"
        - kind: Newline
          text: "\n"
